# app_AI_Agent_hot_news

./: .env.example  .env.production.example  .gitignore  AGENTS.md  DEMO_SCRIPT.md  FINAL_HANDOFF.md  GIAI_THICH_AI_AGENT_PIPELINE_UI_VA_HUONG_PHAT_TRIEN.txt  GIAI_THICH_TOAN_BO_PIPELINE.txt  HUONG_DAN_CHAY_NHANH.md  MO_TA_GIAO_DIEN_VA_UI_HIEN_TAI.txt  Makefile  PLAN.md  README.md  START_HERE.txt  TOAN_BO_NOI_DUNG_GIAO_DIEN_HIEN_TAI.txt  TOM_TAT_HE_THONG_HIEN_TAI.txt  docker-compose.yml  pyproject.toml
00_tong_quan/: NGUON_GOI_Y.md  PHAM_VI_VA_YEU_CAU.md  PROJECT_BRIEF.md
01_kien_truc/: KIEN_TRUC_TONG_THE.md  QUYET_DINH_THIET_KE.md  SO_DO_MERMAID.md
02_pipeline/: 00_PIPELINE_CHUNG.md  01_PIPELINE_TIN_TUC.md  02_PIPELINE_GIA_CA.md  03_PIPELINE_THOI_TIET.md  04_PIPELINE_CHINH_SACH.md  05_PIPELINE_GIAO_THONG.md
03_du_lieu_va_db/: CHIEN_LUOC_DEDUP.md  CHIEN_LUOC_LUU_TRU.md  DATABASE_SCHEMA.md  schema.sql
04_backend_api/: API_SPEC.md  KIEN_TRUC_CODE_GOI_Y.md  SERVICE_LAYER.md
05_ai_agent/: AI_AGENT_GIAI_THICH.md  OPENAI_INTEGRATION.md  RAG_VA_VECTOR.md  TOOL_CALLING_DESIGN.md
06_deployment/: .env.example  DEMO_SCRIPT.md  RUNBOOK.md  STACK_DE_XUAT.md  docker-compose.yml
07_tien_do_va_task/: BACKLOG_CHECKLIST.md  IMPLEMENTATION_SEQUENCE.md  PROGRESS.md
08_prompts/: 00_DOC_HUONG_DAN_PROMPT.md  01_CODEX_KICKOFF_MASTER_PROMPT.md  02_CODEX_PLAN_AND_REPO_SETUP.md  03_CODEX_PIPELINE_NEWS.md  04_CODEX_PIPELINE_PRICES.md  05_CODEX_PIPELINE_WEATHER.md  06_CODEX_PIPELINE_POLICY.md  07_CODEX_PIPELINE_TRAFFIC.md  08_CODEX_DATABASE_AND_STORAGE.md  09_CODEX_BACKEND_API.md  (+6 more)
(+185 files in other folders)
