[project]
name = "vn-daily-news-ai"
version = "0.1.0"
description = "Nen tang du lieu tin tuc va thong tin hang ngay tai Viet Nam, co tich hop AI hoi dap."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.115.0",
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "psycopg[binary]>=3.2.0",
  "pyyaml>=6.0.0",
  "sqlalchemy>=2.0.0",
  "streamlit>=1.37.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "UP046"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
